# asr-summary-llm

./: .env-template  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
asr_summary_llm/: api.py  clean.py  create.py  main.py
old/: clean.py  create.py  main.py
