[tool.poetry]
name = "asr-summary-llm"
version = "0.1.0"
description = ""
authors = ["Marc Fabian Mezger"]
license = "MIT"
readme = "README.md"
packages = [{include = "asr_summary_llm"}]

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20230314"
pyannote-audio = {git = "https://github.com/pyannote/pyannote-audio.git", branch = "develop"}
gpt4all = "^1.0.8"
torch = "2.0.0"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
